--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "lowdb": "^1.0.0",
+    "multer": "^1.4.1",
     "pub": "^0.2.0",
     "pug": "^2.0.3",
     "supervisor": "^0.12.0"
